--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.3.7",
+        "php": ">=8.3.6",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "php-cs-fixer/shim": "^3.58",
         "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
